# Mediguard

MediGuard-Analytics_Health-Insurance/: .gitignore  Cargo.toml  DEMO_SCRIPT.md  README.md  TROUBLESHOOTING_GUIDE.md  _brand.yml  api.py  app.R  app_bulletproof.R  app_fixed.R  app_no_chat.R  app_ultra_simple.R  deploy_to_connect.R  diagnose_error.R  eda.qmd  final_diagnostic.R  launch_app.R  launch_fixed_app.R  main.py  posit-README.md  pyproject.toml  run_bulletproof.sh  run_simple.R  test_basic.R  test_clean_env.R  test_isolated.R  test_minimal.R
MediGuard-Analytics_Health-Insurance/.posit/publish/: Health-Insurance-querychat-0SOI.toml  MediGuard-Analytics_Health-Ins-0453.toml  MediGuard-Analytics_Health-Ins-A711.toml  MediGuard-Analytics_Health-Ins-E5JO.toml  MediGuard-Analytics_Health-Ins-P1ML.toml
MediGuard-Analytics_Health-Insurance/.posit/publish/deployments/: deployment-AJF1.toml  deployment-BRVH.toml  deployment-FH7C.toml  deployment-NGOO.toml  deployment-R73P.toml
MediGuard-Analytics_Health-Insurance/data/: generate_data.py
MediGuard-Analytics_Health-Insurance/ml/: model_utils.py  train_model.py
